# twisty-solver

./: .gitignore  Cargo.toml  README.md  cargo.toml
kociemba/: Cargo.toml
kociemba/src/: coords.rs  lib.rs  moves.rs  permutation_coord.rs  repr_coord.rs  repr_cubie.rs  repr_phase_1.rs  repr_phase_2.rs  search.rs  sym_coord.rs  symmetries.rs
kociemba/src/cube_ops/: combo_coords.rs  coords.rs  corner_perm_combo_coord.rs  cube_move.rs  cube_sym.rs  edge_group_orient_combo_coord.rs  mod.rs  phase_1_repr.rs  repr_coord.rs  repr_cube.rs
kociemba/src/permutation_math/: grouping.rs  lehmer_rank.rs  mod.rs  permutation.rs
kociemba/src/tables/: grouped_edge_moves.rs  lookup_sym_corner_perm.rs  lookup_sym_edge_group_orient.rs  mod.rs  move_raw_corner_orient.rs  move_raw_corner_perm.rs  move_raw_e_edge_perm.rs  move_raw_ud_edge_perm.rs  move_sym_corner_perm.rs  move_sym_edge_group_flip.rs  move_sym_edge_group_orient.rs  move_table_edge_group_and_orient.rs  move_table_raw_corner_orient.rs  move_table_raw_corner_perm.rs  move_table_raw_e_edge_perm.rs  move_table_raw_edge_group_and_orient.rs  move_table_raw_edge_grouping.rs  move_table_raw_edge_orient.rs  move_table_raw_ud_edge_perm.rs  move_table_sym_phase_1_edge.rs  move_table_sym_phase_2_corner.rs  prune_phase_1.rs  prune_phase_2.rs  prune_phase_2_corner_perm.rs  pruning_table_phase_1_working.rs  sym_lookup_phase_1_edge.rs  sym_lookup_phase_2_corner.rs  table_loader.rs
puzzle-core/: Cargo.toml
puzzle-core/src/: lib.rs  puzzle.rs  scramble.rs  test.rs  three_solver.rs
puzzle-core/src/kociemba/: coord.rs  cubie_repr.rs  mod.rs  moves.rs  permutation_coord.rs  phase_1_repr.rs  sym_coord.rs
three_by_three/: Cargo.toml
three_by_three/src/: lib.rs
three_by_three/src/cube_entry/: mod.rs
three_by_three/src/cube_ops/: cube_move.rs  cube_prev_axis.rs  cube_sym.rs  mod.rs  repr_cube.rs
three_by_three/src/kociemba/: mod.rs
three_by_three/src/permutation_math/: lehmer_rank.rs  permutation.rs
three_by_three/src/tables/: lookup_sym_corner_perm.rs  mod.rs  prune_phase_1.rs  (+7 more)
(+94 files in other folders)
