
[package]
name = "kociemba"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kociemba"

[[bin]]
name = "tablegen"

[dependencies]
smallvec = "1.10.0"
num_enum = "0.7.3"
memoffset = "0.7"
paste = "1.0.9"
memmap2 = "0.9.5"
anyhow = "1.0.98"
crc32fast = "1.4.2"
dirs = "6.0.0"
rayon = "1.10.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
