
[package]
name = "three_by_three"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "three_by_three"

[dependencies]
smallvec = "1.10.0"
num_enum = "0.7.3"
memoffset = "0.7"
paste = "1.0.9"
memmap2 = "0.9.5"
anyhow = "1.0.98"
crc32fast = "1.4.2"
dirs = "6.0.0"
rayon = "1.10.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
itertools = "0.14.0"
fs2 = "0.4.3"
pathfinding = "4.14.0"
num-integer = "0.1.46"
phf = { version = "0.13.1", features = ["macros"] }
bitvec = "1.0.1"
arrayvec = "0.7.6"
flume = { version = "0.11.1", features = ["async"] }
futures-core = "0.3.31"
pin-project = "1.1.10"
futures = "0.3.31"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"

